--- a/src/templates/account/registration/activation_invalid.html
+++ b/src/templates/account/registration/activation_invalid.html
@@ -1,1 +1,12 @@
-invalid
+{% extends "../sub_base.html" %}
+{% block title %}Invalide activation{% endblock %}
+{% block content %}
+
+<div class="container">
+    <div>
+        <h3 class="mb-4 fw-bold">Error</h3>
+        <p>Ask for help somewhere :)</p>
+    </div>
+</div>
+                    
+{% endblock %}
