added paypal payment and fixed oreders

--- a/templates/account/dashboard/addresses.html
+++ b/templates/account/dashboard/addresses.html
@@ -35,7 +35,7 @@
           {% if address.default %}
             Default Adress
           {% endif %}
-          &nbsp; <!-- its just holds empty space so that our tabel doesnt scale down if there is nothing in it-->
+          &nbsp; <!-- its just "holds" empty space so that our tabel doesnt scale down if there is nothing in it-->
         </div>
         <div class="card-body small pb-1">
           <p class="card-text m-0 fw-bold">{{address.full_name}}</p>
