--- a/templates/checkout/payment_selection.html
+++ b/templates/checkout/payment_selection.html
@@ -39,7 +39,7 @@
 </div>
 <!--https://www.brennantymrak.com/articles/fetching-data-with-ajax-and-django.html-->
 <script
-  src="https://www.paypal.com/sdk/js?client-id=AdZMo8dnqgqBhuTbF-s44pFVj7hX8wZx2Xclw7F4wtlj4rx1o1m2W8_x5iR0F3C6OLWJcdmN-SMhvDlm&currency=USD"
+  src="https://www.paypal.com/sdk/js?client-id=TESTID&currency=USD"
   data-sdk-integration-source="button-factory">
 </script>
 <script>
